objects/vlocity_ins__VlocitySearchWidgetActionsSetup__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_ins__ActionName__c</fullName>
        <formula>vlocity_ins__VlocityActionId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ActionType__c</fullName>
        <label>Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Launch</fullName>
                </value>
                <value>
                    <fullName>ResultPane</fullName>
                </value>
                <value>
                    <fullName>SecondResultPane</fullName>
                </value>
                <value>
                    <fullName>VerificationPane</fullName>
                </value>
                <value>
                    <fullName>VerifyAction</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__ApplicableCondition__c</fullName>
        <label>Applicable Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>ResultsAvailable</fullName>
                </value>
                <value>
                    <fullName>NoResult</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplayLabel__c</fullName>
        <formula>vlocity_ins__VlocityActionId__r.vlocity_ins__DisplayLabel__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Display Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DisplaySequence__c</fullName>
        <label>Display Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvokeClassName__c</fullName>
        <formula>vlocity_ins__VlocityActionId__r.vlocity_ins__InvokeClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoke Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__InvokeMethodName__c</fullName>
        <formula>vlocity_ins__VlocityActionId__r.vlocity_ins__InvokeMethodName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoke Method Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UrlParameters__c</fullName>
        <formula>vlocity_ins__VlocityActionId__r.vlocity_ins__UrlParameters__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action URL Parameters</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Url__c</fullName>
        <formula>vlocity_ins__VlocityActionId__r.vlocity_ins__Url__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Action Target URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityActionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vlocity Action</label>
        <referenceTo>vlocity_ins__VlocityAction__c</referenceTo>
        <relationshipLabel>Vlocity Interaction Launcher Actions</relationshipLabel>
        <relationshipName>VlocitySearchWidgetActionsSetup</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityIcon__c</fullName>
        <formula>vlocity_ins__VlocityActionId__r.vlocity_ins__VlocityIcon__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vlocity Icon</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocitySearchWidgetSetupId__c</fullName>
        <label>Vlocity Interaction Launcher</label>
        <referenceTo>vlocity_ins__VlocitySearchWidgetSetup__c</referenceTo>
        <relationshipLabel>Vlocity Interaction Launcher Actions</relationshipLabel>
        <relationshipName>VlocitySearchWidgetActionsSetup</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vlocity Interaction Launcher Action</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Interaction Launcher Actions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>